--- a/style.css
+++ b/style.css
@@ -21,11 +21,13 @@ border-top: 10px solid rgb(153, 159, 167);
 }  
 details {
     text-align: left;
-    font-size: .75em;
+    font-size: .85em;
+    margin-bottom: 1em;
 }
 #weather {
-    margin-top: 7em;
+    margin-top: 6.5em;
     margin-bottom: 6em;
+    padding: 1em;
     display: flexbox;
     width: 100%;
     z-index: 999;
@@ -41,7 +43,9 @@ footer a {
 footer p {
     font-size: 14px;
 }
-/* Image */ 
+h3 {
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
 img {
 display: flexbox;
 width: 70%;
@@ -83,3 +87,4 @@ border-bottom: 10px solid #0a0d2a;
 opacity: 0;
 transition: opacity 0.2s ease-in-out
 }
+/* END OF CODE */ 
